FirstNationalBank/wwwroot/css/profile.css
body {
    margin: 0;
    font-family: "Lato", sans-serif;
}

.sidebar {
    width: 200px;
    position: absolute;
    z-index: 1;
    top: 100px;
    left: 10px;
    background: #f8f8f8;
    overflow-x: hidden;
    padding: 8px 0;
}

    .sidebar a {
        padding: 6px 8px 6px 16px;
        text-decoration: none;
        float:left;
        font-size: 16px;
        color: #2196F3;
        display: block;
    }

.header {
    width: 100%;
    padding: 10px 0;
    text-align: right;
    background: #f8f8f8;
    display: block;
}

.main-profile {
    margin-left: 220px;
    width: 80%;
    padding: 0px 10px;
}

table {
    border-collapse: collapse;
    table-layout: auto;
    width: 85%;
}

td, th {
    padding: 10px;
    border: 1px solid #dddddd;
    border-collapse: collapse;
}

tr:nth-child(even) {
    background-color: #dddddd;
}

